2004-10-27  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/awt/peer/gtk/GtkChoicePeer.java:
        Resynced with GNU Classpath.

	2004-10-25  Mark Wielaard  <mark@klomp.org>

        * gnu/java/awt/peer/gtk/GtkChoicePeer.java (GtkChoicePeer):
        Call select() when Choice has a selected item.

2004-10-27  Riccardo Mottola <rmottola@users.sf.net>

        * config/powerpc/common.h,
        config/powerpc/aix/md.h
        config/powerpc/darwin/md.h
        config/powerpc/linux/md.h
        config/powerpc/machten/md.h
        config/powerpc/netbsd1/md.h
        Set size of alignment (ALIGNMENT_OF_SIZE) for each PPC os differently

2004-10-27  Helmer Kraemer  <hkraemer@freenet.de>

	* kaffe/kaffevm/thread.c (standardGroup): removed
	(attachFakedThreadInstance): use ThreadGroup.root for the new
	thread

2004-10-26  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/net/protocol/http/Connection.java:
        Resynced with GNU Classpath.

	2004-10-26  Michael Koch  <konqueror@gmx.de>

        * gnu/java/net/protocol/http/Connection.java
        (getOutputStream): Implicitely switch to POST method.

2004-10-25  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/text/BaseBreakIterator.java,
	libraries/javalib/gnu/java/text/CharacterBreakIterator.java,
	libraries/javalib/gnu/java/text/LineBreakIterator.java,
	libraries/javalib/gnu/java/text/SentenceBreakIterator.java,
	libraries/javalib/gnu/java/text/WordBreakIterator.java,
	libraries/javalib/java/text/BreakIterator.java:
        Resynced with GNU Classpath.

	2004-10-25  Tom Tromey  <tromey@redhat.com>

        * gnu/java/text/WordBreakIterator.java (WordBreakIterator): Don't
        initialize `iter'.
        * gnu/java/text/SentenceBreakIterator.java
        (SentenceBreakIterator): Don't initialize `iter'.
        * gnu/java/text/LineBreakIterator.java (LineBreakIterator): Don't
        initialize `iter'.
        * gnu/java/text/CharacterBreakIterator.java