@@ -1,5 +1,17 @@
 2004-10-27  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/java/awt/Choice.java:
+        Resynced with GNU Classpath.
+
+	2004-10-25  Noa Resare  <noa@resare.com>
+
+        * java/awt/Choice.java (add):
+        Implement correct selection behavior when peer == null.
+        (insert): Likewise.
+        (remove): Likewise.
+
+2004-10-27  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/gnu/java/awt/peer/gtk/GtkChoicePeer.java:
         Resynced with GNU Classpath.
 
